# F_PL-Project

./: .gitignore  LICENSE  MANIFEST.in  README.md  examples.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py  show_columns.py  test_app.py  test_app_no_db.py
.venv_new/: pyvenv.cfg
data/processed/: .gitkeep  fpl_players_20250612_231959.csv  fpl_players_20250708_013826.csv  fpl_players_20250708_014106.csv  fpl_players_20250708_022616.csv  fpl_players_latest.csv
data/raw/: .gitkeep  fpl_data_20250612_231959.json  fpl_data_20250708_022615.json  fpl_data_latest.json  fpl_fixtures_20250708_014106.json  fpl_fixtures_latest.json
models/: .gitkeep
notebooks/: model_training.ipynb
src/: advanced_ml_models.py  fetch_fpl_data.py  fetch_fpl_data_new.py  fetch_fpl_data_old.py  optimizer.py  train_advanced_models.py
web_app/: Current_Season_Points.py  FPL_Player_Statistics.py  FPL_Squad_Optimizer.py  Next_3_Gameweeks.py  app.py  app_clean.py  utils.py
web_app/assets/: HOW_TO_ADD_PHOTO.md  README.md
web_app/assets/images/: PLACEHOLDER.md
